--- a/ccapreferences/Resources/Info.plist
+++ b/ccapreferences/Resources/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
-	<string>CCPreferences</string>
+	<string>CCAPreferences</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.p-x9.ccanimator.preferences</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -19,6 +19,6 @@
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
 	<key>NSPrincipalClass</key>
-	<string>CCPreferences.RootListController</string>
+	<string>CCAPreferences.RootListController</string>
 </dict>
 </plist>
