--- a/ccapreferences/Resources/Root.plist
+++ b/ccapreferences/Resources/Root.plist
@@ -10,6 +10,290 @@
 			<key>headerCellClass</key>
 			<string>CCAHeaderView</string>
 		</dict>
+		<dict>
+			<key>cell</key>
+			<string>PSGroupCell</string>
+			<key>label</key>
+			<string>Setting</string>
+		</dict>
+		<dict>
+			<key>cell</key>
+			<string>PSSwitchCell</string>
+			<key>default</key>
+			<true/>
+			<key>defaults</key>
+			<string>com.p-x9.ccanimator.pref</string>
+			<key>key</key>
+			<string>isTweakEnabled</string>
+			<key>label</key>
+			<string>Enabled</string>
+		</dict>
+		<dict>
+			<key>cell</key>
+			<string>PSGroupCell</string>
+			<key>label</key>
+			<string>Custom</string>
+		</dict>
+		<dict>
+			<key>cell</key>
+			<string>PSSwitchCell</string>
+			<key>default</key>
+			<true/>
+			<key>defaults</key>
+			<string>com.p-x9.ccanimator.pref</string>
+			<key>key</key>
+			<string>isCustomEnabled</string>
+			<key>label</key>
+			<string>Cusom Enabled</string>
+		</dict>
+		<dict>
+			<key>cell</key>
+			<string>PSLinkCell</string>
+			<key>cellClass</key>
+			<string>SparkColourPickerCell</string>
+			<key>libsparkcolourpicker</key>
+			<dict>
+				<key>defaults</key>
+				<string>com.p-x9.ccanimator.pref</string>
+				<key>key</key>
+				<string>itemBorderColorCode</string>
+				<key>fallback</key>
+				<string>#ffffff</string>
+				<key>alpha</key>
+				<true/>
+			</dict>
+			<key>label</key>
+			<string>Border Color</string>
+			<key>key</key>
+			<string>itemBorderColorCode</string>
+		</dict>
+
+		<dict>
+			<key>cell</key>
+			<string>PSLinkCell</string>
+			<key>cellClass</key>
+			<string>SparkColourPickerCell</string>
+			<key>libsparkcolourpicker</key>
+			<dict>
+				<key>defaults</key>
+				<string>com.p-x9.ccanimator.pref</string>
+				<key>key</key>
+				<string>itemBackgroundColorCode</string>
+				<key>fallback</key>
+				<string>#000000</string>
+				<key>alpha</key>
+				<true/>
+			</dict>
+			<key>label</key>
+			<string>Item Background Color</string>
+			<key>key</key>
+			<string>itemBackgroundColorCode</string>
+		</dict>
+		<dict>
+			<key>cell</key>
+			<string>PSLinkCell</string>
+			<key>cellClass</key>
+			<string>SparkColourPickerCell</string>
+			<key>libsparkcolourpicker</key>
+			<dict>
+				<key>defaults</key>
+				<string>com.p-x9.ccanimator.pref</string>
+				<key>key</key>
+				<string>itemTintColorCode</string>
+				<key>fallback</key>
+				<string>#FFFFFF</string>
+				<key>alpha</key>
+				<true/>
+			</dict>
+			<key>label</key>
+			<string>Item Tint Color</string>
+			<key>key</key>
+			<string>itemTintColorCode</string>
+		</dict>
+		<dict>
+			<key>cell</key>
+			<string>PSLinkCell</string>
+			<key>cellClass</key>
+			<string>SparkColourPickerCell</string>
+			<key>libsparkcolourpicker</key>
+			<dict>
+				<key>defaults</key>
+				<string>com.p-x9.ccanimator.pref</string>
+				<key>key</key>
+				<string>ccBackgroundColorCode</string>
+				<key>fallback</key>
+				<string>#000000</string>
+				<key>alpha</key>
+				<true/>
+			</dict>
+			<key>label</key>
+			<string>CC Background Color</string>
+			<key>key</key>
+			<string>ccBackgroundColorCode</string>
+		</dict>
+		<dict>
+			<key>cell</key>
+			<string></string>
+			<key>label</key>
+			<string>Border Width</string>
+		</dict>
+		<dict>
+			<key>cell</key>
+			<string>PSSliderCell</string>
+			<key>default</key>
+			<integer>1</integer>
+			<key>defaults</key>
+			<string>com.p-x9.ccanimator.pref</string>
+			<key>key</key>
+			<string>itemBorderWidth</string>
+			<key>min</key>
+			<integer>0</integer>
+			<key>max</key>
+			<integer>5</integer>
+			<key>isSegmented</key>
+			<false/>
+			<key>segmentCount</key>
+			<integer>50</integer>
+			<key>showValue</key>
+			<true/>
+		</dict>
+
+
+		<dict>
+			<key>cell</key>
+			<string>PSGroupCell</string>
+			<key>label</key>
+			<string>Animation</string>
+		</dict>
+		<dict>
+			<key>cell</key>
+			<string>PSSwitchCell</string>
+			<key>default</key>
+			<true/>
+			<key>defaults</key>
+			<string>com.p-x9.ccanimator.pref</string>
+			<key>key</key>
+			<string>isAnimationEnabled</string>
+			<key>label</key>
+			<string>Animation Enabled</string>
+		</dict>
+		<dict>
+			<key>cell</key>
+			<string>PSLinkListCell</string>
+			<key>detail</key>
+			<string>PSListItemsController</string>
+			<key>defaults</key>
+			<string>com.p-x9.ccanimator.pref</string>
+			<key>default</key>
+			<integer>0</integer>
+			<key>key</key>
+			<string>animationRawValue</string>
+			<key>label</key>
+			<string>Animation</string>
+			<key>validTitles</key>
+			<array>
+				<string>Flip From Left</string>
+				<string>Flip From Right</string>
+				<string>Flip From Top</string>
+				<string>Flip From Bottom</string>
+				<string>Curl Up</string>
+				<string>Curl Down</string>
+				<string>Cross Dissolve</string>
+			</array>
+			<key>validValues</key>
+			<array>
+				<integer>0</integer>
+				<integer>1</integer>
+				<integer>2</integer>
+				<integer>3</integer>
+				<integer>4</integer>
+				<integer>5</integer>
+				<integer>6</integer>
+			</array>
+		</dict>
+		<dict>
+			<key>cell</key>
+			<string>PSSwitchCell</string>
+			<key>default</key>
+			<false/>
+			<key>defaults</key>
+			<string>com.p-x9.ccanimator.pref</string>
+			<key>key</key>
+			<string>isAnimationAutoReverseEnabled</string>
+			<key>label</key>
+			<string>Auto Reverse</string>
+		</dict>
+		<dict>
+			<key>cell</key>
+			<string></string>
+			<key>label</key>
+			<string>Duration</string>
+		</dict>
+		<dict>
+			<key>cell</key>
+			<string>PSSliderCell</string>
+			<key>default</key>
+			<integer>1</integer>
+			<key>defaults</key>
+			<string>com.p-x9.ccanimator.pref</string>
+			<key>key</key>
+			<string>animationDuration</string>
+			<key>min</key>
+			<integer>0</integer>
+			<key>max</key>
+			<integer>10</integer>
+			<key>isSegmented</key>
+			<false/>
+			<key>segmentCount</key>
+			<integer>50</integer>
+			<key>showValue</key>
+			<true/>
+		</dict>
+		<dict>
+			<key>cell</key>
+			<string></string>
+			<key>label</key>
+			<string>Interval</string>
+		</dict>
+		<dict>
+			<key>cell</key>
+			<string>PSSliderCell</string>
+			<key>default</key>
+			<integer>1</integer>
+			<key>defaults</key>
+			<string>com.p-x9.ccanimator.pref</string>
+			<key>key</key>
+			<string>animationInterval</string>
+			<key>min</key>
+			<integer>0</integer>
+			<key>max</key>
+			<integer>30</integer>
+			<key>isSegmented</key>
+			<false/>
+			<key>segmentCount</key>
+			<integer>50</integer>
+			<key>showValue</key>
+			<true/>
+		</dict>
+		<dict>
+			<key>cell</key>
+			<string>PSGroupCell</string>
+			<key>label</key>
+			<string>credit</string>
+			<key>footerText</key>
+			<string>@p_x9</string>
+		</dict>
+		<dict>
+			<key>cell</key>
+			<string>PSButtonCell</string>
+			<key>icon</key>
+			<string>twitter.png</string>
+			<key>action</key>
+			<string>twitter</string>
+			<key>label</key>
+			<string>Follow on Twitter</string>
+		</dict>
+		
 	</array>
 	<key>title</key>
 	<string>CCAnimator</string>
