--- a/ccapreferences/Resources/Root.plist
+++ b/ccapreferences/Resources/Root.plist
@@ -157,6 +157,32 @@
 			<key>showValue</key>
 			<true/>
 		</dict>
+		<dict>
+			<key>cell</key>
+			<string></string>
+			<key>label</key>
+			<string>Corner Radius</string>
+		</dict>
+		<dict>
+			<key>cell</key>
+			<string>PSSliderCell</string>
+			<key>default</key>
+			<integer>19</integer>
+			<key>defaults</key>
+			<string>com.p-x9.ccanimator.pref</string>
+			<key>key</key>
+			<string>itemCornerRadius</string>
+			<key>min</key>
+			<integer>0</integer>
+			<key>max</key>
+			<integer>30</integer>
+			<key>isSegmented</key>
+			<false/>
+			<key>segmentCount</key>
+			<integer>300</integer>
+			<key>showValue</key>
+			<true/>
+		</dict>
 
 
 		<dict>
